--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.lalyos</groupId>
+            <artifactId>jfiglet</artifactId>
+            <version>0.0.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
