--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
             <artifactId>jfiglet</artifactId>
             <version>0.0.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>app</finalName>
